--- a/root/tema3.html
+++ b/root/tema3.html
@@ -115,6 +115,76 @@
                         </footer>
                 </article>
                 <article>
+                    <header>
+                        <hgroup>
+                            <h2>
+                                <img src="/root/assets/images/pateando.png" alt="futbol" width="auto" height="35px">
+                                investigacion semana 5
+                            </h2>
+                            <h4>23/02/22</h4>
+                        </hgroup>
+                    </header>
+                    <div>
+                        <h3>
+                            historia de la champions
+                        </h3>
+                        <p>
+                            La UEFA Champions League, originalmente conocida como la Copa de Europa, es la competencia europea de clubes organizada 
+                            por la Unión de Asociaciones Europeas de Fútbol (UEFA), considerada la más importante y prestigiosa del continente europeo. 
+                            Algo que ha caracterizado esta competencia es la magia que se ve en los partidos. Y es que además de ver a los mejores 
+                            clubes europeos y a los mejores jugadores del mundo compitiendo, a lo largo de la historia de este torneo hemos podido 
+                            ver momentos históricos, equipos que rompen todos los pronósticos y las vivencias más significativas dentro del mundo del 
+                            deporte. Aquí te contaremos a grandes rasgos cómo este campeonato se convirtió en lo que conocemos hoy en día
+                        </p>
+                        <figure class="ilustracion">
+                            <img src="/root/assets/images/brasil.jpg" alt="futbol" height="600px" width="auto">
+                            <figcaption>brasileiro</figcaption>
+                        </figure>
+                        <p>
+                            Resulta que cuando el formato se prestó a la FIFA, esta competencia no fue muy bien vista y no tuvo mucho apoyo de los 
+                            directivos. De manera que todo despegó hasta que un editor del diario deportivo L´Equipe, Gabriel Hanot, su colega 
+                            Jacques Ferrán y el presidente del Real Madrid, Santiago Bernabéu la retomaron.
+                        </p>
+                        <h3>
+                            equipos con grandes historias
+                        </h3>
+                        <p>
+                            La Copa de Europa, denominada desde 1993 UEFA Champions League, cumplió el pasado 4 de septiembre 66 años de vida,
+                             tiempo en el que fue la testigo más fiel del desarrollo del fútbol mundial. Desde aquel pequeño torneo ideado por 
+                             el diario francés L'Équipe hasta este mega evento universal mucho (o todo) ha cambiado y hoy la Champions tiene 
+                             un valor que trasciende la competencia misma.
+                        </p>
+                    </div>
+                    <footer>
+                        <div>
+                            <span>
+                                news letter <a href="https://audinewsletter.com.mx/audi-trends/asi-nacio-la-champions-league/" target="_blank">asi nacio la champions League</a>
+                            </span>
+                        </div>
+                        <div>
+                            <span>
+                                espn <a href="https://www.espn.com.mx/futbol/champions-league/nota/_/id/9197457/uefa-champions-league-paises-campeones-historia-naciones-dinastias-reinados" target="_blank">champions league una historia de dinastias</a>
+                            </span>
+                        </div>
+                        <div>
+                            <span>
+                                el pais <a href="https://elpais.com/publi-especial/historia-champions-league/momentos-champions-league.html" target="_blank">momentos que son histori</a>
+                            </span>
+                        </div>
+                        <blockquote>
+                            <p>
+                                Ediciones EL PAÍS. (2022). Los mejores momentos de la historia de la Champions League. Retrieved February 24, 2022, from EL PAÍS website: https://elpais.com/publi-especial/historia-champions-league/momentos-champions-league.html
+                            </p>
+                            <p>
+                                Didonato, D. (2021, September 14). La UEFA Champions League: una historia de dinastías y reinados. Retrieved February 24, 2022, from ESPN.com.mx website: https://www.espn.com.mx/futbol/champions-league/nota/_/id/9197457/uefa-champions-league-paises-campeones-historia-naciones-dinastias-reinados
+                            </p>
+                            <p>
+                                Así nació la copa de campeones de Europa: La UEFA Champions League | Audi Newsletter. (2020, April). Retrieved February 24, 2022, from Audi Newsletter website: https://audinewsletter.com.mx/audi-trends/asi-nacio-la-champions-league/
+                            </p>
+                        </blockquote>
+                    </footer>
+                </article>
+                <article>
                     <h2><img src="assets/images/futbol.png" alt="futbol" height="35px" width="auto">jugadores que mejor son pagados</h2>
                     <h4>10/11/21</h4>
                     <div>
@@ -123,12 +193,13 @@
                             title="YouTube video player" frameborder="0" 
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                             allowfullscreen></iframe>
-                            <figcaption>raning de futbolistas mejor pagados</figcaption>
+                            <figcaption>ranking de futbolistas mejor pagados</figcaption>
                         </figure>
                         <p> en el video nos muestra dentro del futbol pero hay mas alla de eso pero
                             no mas alla de cristiano y normalmente cobran lo que generan y el entreteniemiento
                             es algo mas alla que se paga increibemente bien
                         </p>
+                        <label>porcentaje de victoria de PSG ante el real Madrid</label><meter value="78" min="0" max="100">78</meter>
                     </div>
                     <!--termina contenido del articulo-->
                     <footer>
@@ -153,7 +224,7 @@
                     <header>
                         <hgroup>
                             <!--titulo del articulo-->
-                            <h2><img src="assets/images/correr.png" alt="futbolistas" height="35px"
+                            <h2><img src="assets/images/futbol.png" alt="futbolistas" height="35px"
                                     width="auto">Paginas oficiales
                             </h2>
                             <!--fecha en la que se escibio el articulo-->
@@ -171,7 +242,7 @@
                     <header>
                         <hgroup>
                             <h2>
-                                <img src="/Root/Assets/Images/guitarra.png" alt="guitarra" width="auto" height="35px">
+                                <img src="/Root/Assets/Images/futbol.png" alt="futbol" width="auto" height="35px">
                                 video explicando
                             </h2>
                             <h4>
@@ -185,6 +256,18 @@
                             <figcaption>video explicando</figcaption>
                         </figure>
                     </div>
+                    <footer>
+                        <div>
+                            <span>
+                                tipos de mtv mas rapidos <a href="https://www.youtube.com/channel/UC_Aqi7APS5AlQJEFP5tY1eg" target="_blank">luisfe muñoz</a>
+                            </span>
+                        </div>
+                        <blockquote>
+                            <p>
+                                luisfe muñoz [YouTube Video]. (2022). Retrieved from https://www.youtube.com/channel/UC_Aqi7APS5AlQJEFP5tY1eg
+                            </p>
+                        </blockquote>
+                    </footer>
                 </article>
                 <article>
                     <header>
@@ -268,7 +351,7 @@
                             extraordinarios para la salud de todos aquellos que lo practican
                         </p>
                         <figure class="ilustracion">
-                            <img src="/root/assets/images/futbol.jpg" alt="futbol" width="600px" height="auto">
+                            <img src="/root/assets/images/otro_balon.jpg" alt="futbol" width="600px" height="auto">
                             <figcaption>futbolistas</figcaption>
                         </figure>
                         <p>
@@ -293,7 +376,7 @@
                             y vitaminas como las frutas, las verduras y las nueces.
                         </p>
                         <figure class="ilustracion">
-                            <img src="/root/assets/images/futbol.jpg" alt="futbol" height="600px" width="auto">
+                            <img src="/root/assets/images/dominando.jpg" alt="futbol" height="600px" width="auto">
                             <figcaption>futbolistas</figcaption>
                         </figure>
                     </div>
