--- a/root/tema4.html
+++ b/root/tema4.html
@@ -195,6 +195,7 @@
                             deporte y no        
                             los que se lo merecen por titulos ya que si fuera asi se mostrarian otros dentro de la tabla
                         </p>
+                        <label>porcentaje de estudiantes que van en bicicleta</label><meter value="1.67" min="0" max="100"
                     </div>
                     <!--termina contenido del articulo-->
                     <footer>
