--- a/root/tema4.html
+++ b/root/tema4.html
@@ -26,7 +26,7 @@
                     <h1>mejores ciclistas</h1>
                 </hgroup>
             </header>
-            <main>
+            <main class="main">
                 <article>
                     <h2><img src="assets/images/ciclista.png" alt="ciclismo" height="35px" width="auto">¿es tan peligroso?</h2>
                     <!--fecha en la que se escibio el articulo-->
@@ -364,33 +364,69 @@
                     </footer>
                 </article>
             </main>
-            <aside>
+            <aside class="microbloging">
                 <h2>
                     microblogging
                 </h2>
                 <div>
+                    <img src="/root/assets/images/gps.png" alt="gps" width="auto" height="35px">
                     <span>
                         El Draisine, predecesor de la bici moderna
                     </span>
                 </div>
                 <div>
+                    <img src="/root/assets/images/gps.png" alt="gps" width="auto" height="35px">
                     <span>
                         El primer boceto de una bicicleta que se conoce, fue elaborado por Leonardo Da Vinci 
                     </span>
                 </div>
                 <div>
+                    <img src="/root/assets/images/gps.png" alt="gps" width="auto" height="35px">
                     <span>
                         El antecedente directo de la bicicleta fue construido por un alemán de nombre Karl Dreis, en 1816
                     </span>
                 </div>
                 <div>
+                    <img src="/root/assets/images/gps.png" alt="gps" width="auto" height="35px">
                     <span>
                         El inventor de los pedales fue el escocés Kirkpatrick Macmillan, en 1839.
                     </span>
                 </div>
                 <div>
+                    <img src="/root/assets/images/gps.png" alt="gps" width="auto" height="35px">
                     <span>
                         Al principio, las ruedas de la bicicleta se elaboraban en madera. Fue hasta 1845
+                    </span>
+                </div>
+                <div>
+                    <img src="/root/assets/images/gps.png" alt="gps" width="auto" height="35px">
+                    <span>
+                           
+                    </span>
+                </div>
+                <div>
+                    <img src="/root/assets/images/gps.png" alt="gps" width="auto" height="35px">
+                    <span>
+                        La primer cosa que tenemos que hacer antes de salir a rodar es revisar que la bicicleta se encuentre en buen estado. Es importante revisar:      
+                    </span>
+                </div>
+                <div>
+                    <img src="/root/assets/images/gps.png" alt="gps" width="auto" height="35px">
+                    <span>
+                        La bicicleta es un vehículo y al igual que los automóviles tiene el derecho a circular por las vías públicas (calles, avenidas, etc). La bicicleta deberá circular por el carril de la extrema derecha.
+                        En caso de que se circule a mayor velocidad que los demás vehículos sobre el carril de la derecha, se podrá cambiar de carril para rebasar.      
+                    </span>
+                </div>
+                <div>
+                    <img src="/root/assets/images/gps.png" alt="gps" width="auto" height="35px">
+                    <span>
+                        Existen una serie de medidas que podemos utilizar para llamar la atención de los conductores y facilitar el ser vistos.     
+                    </span>
+                </div>
+                <div>
+                    <img src="/root/assets/images/gps.png" alt="gps" width="auto" height="35px">
+                    <span>
+                        De ser posible, es importante establecer contacto visual con otros conductores para cerciorarnos que nos han visto     
                     </span>
                 </div>
             </aside>
