--- a/root/tema4.html
+++ b/root/tema4.html
@@ -42,7 +42,7 @@
                             la Catalina y hacer más sencillo el manejo de las relaciones llevándolos a un solo actuador en el manubrio a diferencia de los sistemas tradicionales con relaciones en el casete y también en la catalina que requieren de dos actuadores o 
                             sistemas electromecánicos automatizados más complejos y costosos</p>
                         <figure class="ilustracion">
-                            <img src="/root/assets/images/ciclistas.jpg" alt="Bicicleta" height="600px" width="auto">
+                            <img src="/root/assets/images/ciclistas.jpg" alt="Bicicleta" height="auto" width="100%">
                             <figcaption>Ciclismo de Montaña</figcaption>
                         </figure>
                         <p>A historia del ciclismo se remonta al final del siglo XIX, más o menos a partir de 1890.
@@ -134,7 +134,7 @@
                             Este deporte tiene algo que engancha. Tras las dos ruedas, el pedaleo, el recorrido, el pavimento y la rutina se halla un componente de superación muy claro. Las ganas de querer ir a más y batir tus propias marcas a través siempre del disfrute que representa el ciclismo. Esfuerzo, paisajes, aire puro, travesías, resistencia, ácido láctico apareciendo, liberación, cadencia. Todo se junta en una gran, exigente y apasionante coctelera. Por eso, en este post te dejamos algunos consejos sobre cómo mejorar tu rendimiento en el ciclismo: opciones, caminos y posibilidades para superar tus límites.
                         </p>
                         <figure class="ilustracion">
-                            <img src="/root/assets/images/sol.jpg" alt="futbol" height="600px" width="auto">
+                            <img src="/root/assets/images/sol.jpg" alt="futbol" height="auto" width="100%">
                             <figcaption>sol en una cuesta</figcaption>
                         </figure>
                         <p>
@@ -256,7 +256,7 @@
                               las primeras competiciones oficiales
                         </p>
                         <figure class="ilustracion">
-                            <img src="/root/assets/images/flor.jpg" alt="ciclismo" height="600px" width="auto">
+                            <img src="/root/assets/images/flor.jpg" alt="ciclismo" height="auto" width="100%">
                             <figcaption>ciclistas</figcaption>
                         </figure>
                         <p>
@@ -275,7 +275,7 @@
                             tramos y rutas por recorrer.
                         </p>
                         <figure class="ilustracion">
-                            <img src="/root/assets/images/paisaje.jpg" alt="ciclismo" height="600px" width="auto">
+                            <img src="/root/assets/images/paisaje.jpg" alt="ciclismo" height="auto" width="100%">
                             <figcaption>ciclistas</figcaption>
                         </figure>
                     </div>
@@ -342,7 +342,7 @@
                             menos saludable o directamente perjudicial para la salud.
                         </p>
                         <figure class="ilustracion">
-                            <img src="/root/assets/images/cabeza.jpg" alt="ciclismo" height="600px" width="auto">
+                            <img src="/root/assets/images/cabeza.jpg" alt="ciclismo" height="auto" width="100%">
                             <figcaption>ciclistas</figcaption>
                         </figure>
                     </div>
@@ -401,7 +401,7 @@
                 <div>
                     <img src="/root/assets/images/gps.png" alt="gps" width="auto" height="35px">
                     <span>
-                           
+                        En el mundo se venden 4 bicicletas por segundo. Esto implica un total de más de 130 millones de bicicletas por año.            
                     </span>
                 </div>
                 <div>
@@ -427,6 +427,36 @@
                     <img src="/root/assets/images/gps.png" alt="gps" width="auto" height="35px">
                     <span>
                         De ser posible, es importante establecer contacto visual con otros conductores para cerciorarnos que nos han visto     
+                    </span>
+                </div>
+                <div>
+                    <img src="/root/assets/images/gps.png" alt="gps" width="auto" height="35px">
+                    <span>
+                        El récord de ciclismo lento lo impuso Tsugunobu Mitsuishi de Japón en 1965, cuando permaneció estático en la bici por 5 horas y 25 minutos.
+                    </span>
+                </div>
+                <div>
+                    <img src="/root/assets/images/gps.png" alt="gps" width="auto" height="35px">
+                    <span>
+                        La máxima velocidad registrada en bici la obtuvo Fred Rompelberg, ciclista holandés que en 1995 logró pedalear a 245 kms/hr siguiendo a un dragster (un vehículo que le cortaba el aire). Tenía 50 años al momento de lograrlo.
+                    </span>
+                </div>
+                <div>
+                    <img src="/root/assets/images/gps.png" alt="gps" width="auto" height="35px">
+                    <span>
+                        El récord de mayor tiempo pedaleando sin parar lo tiene Ramu Pandey, de la India, quién completó 86 horas y 45 minutos seguidos.
+                    </span>
+                </div>
+                <div>
+                    <img src="/root/assets/images/gps.png" alt="gps" width="auto" height="35px">
+                    <span>
+                        El récord de mayor distancia cubierta en una hora (avalado por la Unión Ciclista Internacional) lo ostenta el británico Alex Dowsett 02/05/2015, al cubrir 52,937 kilómetros.
+                    </span>
+                </div>
+                <div>
+                    <img src="/root/assets/images/gps.png" alt="gps" width="auto" height="35px">
+                    <span>
+                        El 7 de enero de 1877 el estadounidense Thomas Stevens realizó el primer viaje en bicicleta alrededor del mundo. Tardó tres años en completarlo.
                     </span>
                 </div>
             </aside>
